Fix spacing in tabs heading

--- a/sass/styleguide/objects/_tabs.scss
+++ b/sass/styleguide/objects/_tabs.scss
@@ -38,7 +38,6 @@ Navigation usually means list of links. And we have some flavours using distinct
     background-color: #f7f7f7;
     border-top: 1px solid color("border");
     display: table-cell;
-    padding: 1.5rem;
     position: relative;
 
     a {
